--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@awesome-cordova-plugins/native-geocoder": "^5.41.0",
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
+    "@capacitor/core": "3.5.0",
+    "@capacitor/google-maps": "^1.0.0",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.5.1",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/react": "^6.0.0",
@@ -14,14 +17,18 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "cordova-plugin-nativegeocoder": "^3.4.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "ionicons": "^5.4.0",
+    "luxon": "^2.4.0",
+    "moment": "^2.29.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.34.19",
@@ -69,7 +76,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.3",
-    "@testing-library/react-hooks": "^7.0.2"
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/luxon": "^2.3.2"
   },
   "description": "An Ionic project"
 }
