--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.31.3",
     "react-query": "^3.34.19",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
