--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.3",
+    "@ionic/lab": "3.2.12",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/luxon": "^2.3.2"
   },
